--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <title>Clean city</title>
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono|Open+Sans:300,400,500" rel="stylesheet">
-    <link rel="stylesheet" href="../src/styles/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./src/styles/font-awesome/css/font-awesome.min.css">
   <body>
     <div id="content"></div>
     <script src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0" type="text/javascript"
 charset="UTF-8"></script>
-    <script src="/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </body>
 </html>
