--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <div id="content"></div>
     <script src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0" type="text/javascript"
 charset="UTF-8"></script>
-    <script src="./dist/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
