--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
     <title>Clean city</title>
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono|Open+Sans:300,400,500" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/font-awesome/css/font-awesome.min.css">
   <body>
     <div id="content"></div>
-    <script src="http://ecn.dev.virtualearth.net/mapcontrol/mapcontrol.ashx?v=7.0" type="text/javascript"
-charset="UTF-8"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsAcShVzRwjQs4MK7DL9KrpSfXfzEUivA"></script>
     <script src="/bundle.js"></script>
   </body>
 </html>
