--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="content"></div>
     
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsAcShVzRwjQs4MK7DL9KrpSfXfzEUivA"></script>
-    <script src="/bundle.js"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
