a lot of changes

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link href="https://fonts.googleapis.com/css?family=Droid+Sans+Mono|Open+Sans:300,400,500" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="./src/styles/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./src/styles/main.css">
+    <link rel="stylesheet" href="./src/styles/tables.css">
   <body>
     <div id="content"></div>
     
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsAcShVzRwjQs4MK7DL9KrpSfXfzEUivA"></script>
-    <script src="./bundle.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCsAcShVzRwjQs4MK7DL9KrpSfXfzEUivA"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
